[tool.poetry]
name = "RidenGUI"
version = "0.2.2"
description = "Riden Qt GUI using PySide2"
license = "MIT"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
homepage = "https://github.com/ShayBox/RidenGUI"
repository = "https://github.com/ShayBox/RidenGUI.git"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.11"
riden = {git = "https://github.com/shaybox/riden.git"}
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ridengui = "ridengui.main:main"
ridengenui = "ridengui.gen:gen"
