[tool.poetry]
name = "RidenGUI"
version = "1.0.0"
description = "Qt 5/6 based GUI for Riden RDXX power supplies written in Python"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]

[tool.poetry.dependencies]
PySide2 = { version = "^5.15.2", optional = true }
PySide6 = { version = "^6.2.3", optional = true }
python = ">=3.7,<3.11"
riden = { git = "https://github.com/shaybox/riden.git" }

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ridengui = "ridengui.main:main"
ridengenui = "ridengui.gen:gen"

[tool.poetry.extras]
"PySide2" = ["PySide2"]
"PySide6" = ["PySide6"]

[tool.black]
line-length = 240
